better naming and better pulp API usage

--- a/coding-hometask-4-1.ipynb
+++ b/coding-hometask-4-1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -87,61 +87,70 @@
      "output_type": "stream",
      "text": [
       "291.0\n",
-      "1 ⟶ 13 ⟶ 2 ⟶ 15 ⟶ 9 ⟶ 5 ⟶ 7 ⟶ 3 ⟶ 12 ⟶ 14 ⟶ 10 ⟶ 8 ⟶ 6 ⟶ 4 ⟶ 11\n"
+      "1 ⟶ 12 ⟶ 5 ⟶ 7 ⟶ 9 ⟶ 11 ⟶ 15 ⟶ 13 ⟶ 4 ⟶ 8 ⟶ 6 ⟶ 10 ⟶ 16 ⟶ 3 ⟶ 14 ⟶ 2\n",
+      "CPU times: user 36 ms, sys: 4 ms, total: 40 ms\n",
+      "Wall time: 864 ms\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "def solve_tsp_with_lp(num_vertices: int, distance_function: Callable[[int, int], int]) -> List[int]:\n",
     "    n = num_vertices\n",
     "    \n",
-    "    # ================================== Setting LP problem =====================================\n",
+    "    all_vertices = range(0, n)\n",
+    "    all_edges    = list(itertools.permutations(all_vertices, 2))\n",
+    "    \n",
+    "    assert len(all_edges) == n * (n - 1)\n",
+    "    \n",
+    "    # ========================= Setting LP problem ===============================\n",
     "    problem = pulp.LpProblem(name=\"TSP in Linear Programming\", sense=pulp.LpMinimize)\n",
     "    \n",
-    "    x = [[pulp.LpVariable(name=\"x_{}_{}\".format(i, j),\n",
-    "                                       lowBound = 0,\n",
-    "                                       upBound = 1,\n",
-    "                                       cat = pulp.LpInteger) for j in range(n)] for i in range(n)]\n",
-    "    \n",
+    "    # edge variables\n",
+    "    x = pulp.LpVariable.dicts('x', all_edges,\n",
+    "                              lowBound = 0,\n",
+    "                              upBound = 1,\n",
+    "                              cat = pulp.LpInteger)\n",
     "    # MTZ variables\n",
-    "    u = [pulp.LpVariable(name='u_{}'.format(i),\n",
-    "                         lowBound=1, \n",
-    "                         upBound=num_vertices, \n",
-    "                         cat=pulp.LpInteger) for i in range(n)]\n",
+    "    u = pulp.LpVariable.dicts('u', all_vertices,\n",
+    "                              lowBound = 1,\n",
+    "                              upBound = n,\n",
+    "                              cat = pulp.LpInteger)\n",
+    "\n",
+    "    # Function to minimize   \n",
+    "    problem.objective = pulp.LpAffineExpression(\n",
+    "        [(x[edge], distance_function(edge[0] + 1, edge[1] + 1)) for edge in all_edges]\n",
+    "    )\n",
     "    \n",
-    "    # Function to minimize\n",
-    "    flatten = lambda l: list(itertools.chain.from_iterable(l))    \n",
-    "    problem.objective = pulp.LpAffineExpression(flatten(\n",
-    "                                [[(x[i][j], distance_function(i + 1, j + 1)) \n",
-    "                                  for j in range(n) if i != j]\n",
-    "                                     for i in range(n)]))\n",
-    "    \n",
-    "    # constraints to make solution look like number of cycles\n",
+    "    # =========== constraints to make solution look like number of cycles =======\n",
     "    for v in range(n):\n",
-    "        problem += (pulp.LpAffineExpression([(x[i][v], 1)\n",
-    "                                for i in range(n) if i != v]) == 1)\n",
-    "        problem += (pulp.LpAffineExpression([(x[v][i], 1)\n",
-    "                                for i in range(n) if i != v]) == 1)\n",
+    "        problem += pulp.LpAffineExpression([(x[edge], 1)\n",
+    "                                for edge in all_edges if edge[0] == v]) == 1\n",
+    "        \n",
+    "        problem += pulp.LpAffineExpression([(x[edge], 1)\n",
+    "                                for edge in all_edges if edge[1] == v]) == 1\n",
     "       \n",
     "    # MTZ constraints to exclude case with more than one cycle\n",
-    "    for i in range(n):\n",
-    "        for j in range(1, n):\n",
-    "            if i != j:\n",
-    "                problem += (u[i] - u[j] + n * x[i][j] <= n - 1)\n",
+    "    for edge in all_edges:\n",
+    "        i, j = edge[0], edge[1]\n",
+    "        if j == 0:\n",
+    "            continue\n",
+    "        problem += (u[i] - u[j] + n * x[edge] <= n - 1)\n",
     "    \n",
-    "    # ============================== Solving and answer retrievement ============================\n",
+    "    # ====================== Solving and answer retrievement ====================\n",
     "    problem.solve()\n",
     "    print(problem.objective.value())\n",
     "    \n",
     "    cur_v = 0\n",
-    "    route = [1]\n",
+    "    route = [cur_v]\n",
     "    while len(route) < n:\n",
-    "        for i in range(n):\n",
-    "            if x[cur_v][i].value() == 1.0:\n",
-    "                route.append(i + 1)\n",
-    "                cur_v = i\n",
+    "        for edge in all_edges:\n",
+    "            next_v = edge[1]\n",
+    "            if edge[0] == cur_v and x[edge].value() == 1.0:\n",
+    "                route.append(next_v + 1)\n",
+    "                cur_v = next_v\n",
     "    \n",
-    "    return route\n",
+    "    return list(map(lambda a: a + 1, route))\n",
     "\n",
     "print(' ⟶ '.join(map(str, solve_tsp_with_lp(15, dist15))))"
    ]
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
